Removed Unneccessary files and fixed spacings

--- a/cypherchats/src/styles.scss
+++ b/cypherchats/src/styles.scss
@@ -35,6 +35,9 @@
   display: none;
  }
 
+ .was-validated .form-control:valid, .form-control.is-valid {
+  background-image: none !important;
+ }
 
 .App {
   background-color:   #EAE7DC;
@@ -88,3 +91,24 @@
     color: red;
   }
 }
+
+
+/* body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+} */
+
+
+@import url('https://fonts.cdnfonts.com/css/valorant');
+@import url('https://fonts.cdnfonts.com/css/anton');
+@import url('https://fonts.cdnfonts.com/css/g-guarantee');
+@import url('https://fonts.cdnfonts.com/css/proxima-nova-2');
